libsysstat (0.3.3-1) unstable; urgency=medium

  * Cherry-picking new upstream-release 0.3.3.
  * Removed build dependencies:
    - cmake
    - pkg-config
    - qttools5-dev
    - qttools5-dev-tools
  * Added build-dependency lxqt-build-tools (>= 0.3.0)
  * Fixed typo in VCS-Fields
  * Removed --parallel from debian/rules, standard compat 10
  
 -- Alf Gaida <agaida@siduction.org>  Sun, 11 Dec 2016 20:30:13 +0100

libsysstat (0.3.2-1) unstable; urgency=medium

  * Cherry-picking new upstream release 0.3.2
  * Bump compat to 10
  * Build depend on debhelper (>= 10)
  * Fixed VCS-Fields, use secure uri's
  * Bumped standards to 3.9.8, no changes needed
  * Fixed Format field in copyright, use a secure uri
  * Bumped years in copyright
  * Added README.md to docs
  * Added hardening flags to rules
  * Fixed debian/watch
  * Added a valid upstream signing-key

 -- Alf Gaida <agaida@siduction.org>  Sat, 17 Sep 2016 23:50:00 +0200

libsysstat (0.3.1-2) unstable; urgency=medium

  * Remove dbg package in favor of dbgsym.

 -- Alf Gaida <agaida@siduction.org>  Sat, 26 Dec 2015 17:10:46 +0100

libsysstat (0.3.1-1) unstable; urgency=medium

  * Cherry-picking upstream version 0.3.1.

 -- Alf Gaida <agaida@siduction.org>  Sun, 01 Nov 2015 00:15:25 +0100

libsysstat (0.3.0+20150806-1) unstable; urgency=medium

  [ Alf Gaida ]
  * Initial release (Closes: #761270)
  * Initial debian files
  * symbols file added - tested for amd64 and i386
  * Added .gitignore 
  * Cherry-picking upstream version 0.3.0+201500806
  * Fixed copyright to LGPL2.1+ only
  * Added linker flags to rules
  * Added upstream signing key
  * Changed mail address czchen

  [ Andrew Lee (李健秋) ]
  * Adding upstream version 0.3.0.

  [ Shih-Yuan Lee (FourDollars) ]
  * Imported Upstream version 0.3.0
  * Merge branch 'upstream' into debian
  * Add debian/gbp.conf for xz compression format.
  * Merge remote-tracking branch 'origin/fix-multiarch'

  [ Wei-Cheng Pan ]
  * fix multiarch install path